--- a/index.html
+++ b/index.html
@@ -20,9 +20,18 @@
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="stylesheet" href="css/style.css">
 		<link rel="icon" href="img/logo3.png" type="imag.png" sizes="120px">
-
+		<script language="JavaScript" type="text/javascript">
+		function Abrir_ventana (pagina) {
+		var opciones="toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=yes,width=300,height=300,top=85,left=140";
+		window.open(pagina,"",opciones);
+}
+</script>                    
     </head>
-<body >
+<body onload="Abrir_ventana('https://scontent-mia3-1.xx.fbcdn.net/v/t1.0-9/70275417_2380087955362232_2049462066124685312_n.jpg?_nc_cat=106&_nc_oc=AQnIKx_irTh09LgJ5zerQ1CuM9rnwyzneQ-E4QZSUEjmDumdWXBCUnZ_efPIoR9j4zc&_nc_ht=scontent-mia3-1.xx&oh=00d5da993cbc70b8c38e938d85ca191a&oe=5DC785E4')">	
+		<script language="JavaScript" type="text/javascript">
+		alert("Carga los scripts para visualizar la pagina, click en el icono al final de la barra de buscador como se muestra en la siguiente pagina")
+		</script>
+
 		 <!-- start preloader -->
         <div id="loader-wrapper">
             <div class="logo3.png"></div>
@@ -834,10 +843,12 @@
 			<div class="col-lg-6 col-md-6 col-sm-6">
 				<div class="cnt_info">
 					<ul>
-						<li><i class="fa fa-facebook"></i><p> C.T.P Invu Las Cañas </p></li>
-						<li><i class="fa fa-facebook"></i><p> Multitex </p></li>
 						<li><i class="fa fa-envelope"></i><p > multitextcr@gmail.com </p></li>
 						<li><i class="fa fa-phone"></i><p> (+506) 2453-7685 </p></li>
+						<li><i class="fa fa-facebook"></i><p> Multitext App </p><input style="color:white" class="btn pricing_btn" type="button" value="Ir al Facebook" onClick="window.open('https://www.facebook.com/multitextappcr/?modal=admin_todo_tour&notif_id=1568054716191012&notif_t=page_invite&ref=notif', '', 'width=500,height=500')"></li>
+						<!--
+						<li><i class="fa fa-facebook"></i><p> C.T.P Invu Las Cañas </p></li><input style="color:white" class="btn pricing_btn" type="button" value="Ir al Facebook" onClick="window.open('https://www.facebook.com/Ctp-Invu-Las-Ca%C3%B1as-Alajuela-789664627805817/?hc_ref=ARR_SDCblUfaxo0LfgiIjCqos0oLrItPMSlQ4orvECvRD0fgJBjO9kRK-wG6aIWopSQ&__xts__[0]=68.ARChiC5F23emI-bAOLcVqAjYH4357hlMVSTYpqFp88S2zJxEARKzrPg2MHYcsWt_7QPvAuQGMA8Lcpur2d1IynB0OXiLoUkNf3HAAcVwPbNWXMiUbwS0RXubml3lJn39QcWcixabJAbOtiKe_aCtE3A8e1TjU4OTOWdYwZ9oo3GEw408xta5evJmI8uIMnnOqE15eGl96Y4SM-TjrvyhvL5x6JlQqiHgM9qcL9DJsKNlFPEFsDdJ_b7dqUOrtQHe7zXZgdNLUUeswKWNgKIwmOqtqk-UqdHPG2A-DDhvJb-KB3UmV9Ct1dLpQiNham0a_5fynXnxg6dTW7VM2WMcyTBXZUIfeKUncp91JW9I2afXuDgcxGDq8Xes_6SlR-UN_ITgrpLtz8qTOsMuFGITuFvEHTWOwrmjoVOsngoj9ieM60u7we7XJ9H52EDI_D8MA5qnxgKzZXuitgQAHEw_&__tn__=kC-R', '', 'width=500,height=500')"></li>
+						-->
 					</ul>
 				</div>
 			</div>			
