--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="stylesheet" href="css/style.css">
 		<link rel="icon" href="img/logo3.png" type="imag.png" sizes="120px">
+	    <!--
 		<script language="JavaScript" type="text/javascript">
 		function Abrir_ventana (pagina) {
 		var opciones="toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=yes,width=300,height=300,top=85,left=140";
@@ -30,12 +31,13 @@
 		alert("Carga los scripts para visualizar la pagina, click en el icono al final de la barra de buscador como se muestra en la siguiente pagina")
 		</script>
 
-		 <!-- start preloader -->
+		start preloader 
         <div id="loader-wrapper">
             <div class="logo3.png"></div>
             <div id="loader">
             </div>
-        </div>
+        </div> 
+	 -->
         <!-- end preloader -->
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
