--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 								<li><a class="page-scroll" href="#pr_sec">Agradecimientos</a></li>
 								<li><a class="page-scroll" href="#protfolio_sec">Galeria</a></li>
 								<li><a class="page-scroll" href="#ctn_sec">Contactanos</a></li>
+								<li><a class="page-scroll" href="#ctn_sec">Catalogo</a></li>
 							</ul>
 						</div>		
 						</nav>			
