--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 								<li><a class="page-scroll" href="#pr_sec">Agradecimientos</a></li>
 								<li><a class="page-scroll" href="#protfolio_sec">Galeria</a></li>
 								<li><a class="page-scroll" href="#ctn_sec">Contactanos</a></li>
-								<li><a class="page-scroll" href="#ctn_sec">Catalogo></a>onclick="window.open('https://multitext.github.io/multitextapp/', '', 'width=500,height=500')"></li>
+								<li><a class="page-scroll" href="#ctn_sec"onclick="window.open('https://multitext.github.io/multitextapp/', '', 'width=500,height=500')">Catalogo</a></li>
 							</ul>
 						</div>		
 						</nav>			
