--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
 		var opciones="toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=yes,width=300,height=300,top=85,left=140";
 		window.open(pagina,"",opciones);
 }
-</script>                    
+</script>  
+-->
     </head>
 <body onload="Abrir_ventana('https://scontent-mia3-1.xx.fbcdn.net/v/t1.0-9/70275417_2380087955362232_2049462066124685312_n.jpg?_nc_cat=106&_nc_oc=AQnIKx_irTh09LgJ5zerQ1CuM9rnwyzneQ-E4QZSUEjmDumdWXBCUnZ_efPIoR9j4zc&_nc_ht=scontent-mia3-1.xx&oh=00d5da993cbc70b8c38e938d85ca191a&oe=5DC785E4')">	
 		<script language="JavaScript" type="text/javascript">
-		alert("Carga los scripts para visualizar la pagina, click en el icono al final de la barra de buscador como se muestra en la siguiente pagina")
+		alert("Favor de cargar los scripts para visualizar los elementos de la pagina de forma correcta, click en el icono al final de la barra de buscador")
 		</script>
 
-		start preloader 
+		<!--start preloader 
         <div id="loader-wrapper">
             <div class="logo3.png"></div>
             <div id="loader">
