--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 							</div>
 					  </li>
 					  <li class="progress">
-							<div class="progress-bar" data-width="80" style="color:black">
+							<div class="progress-bar" data-width="0" style="color:black">
 								  App Desarrollada 80%
 							</div>
 					  </li>
@@ -689,7 +689,7 @@
 					<h2 class="title_bg_3"> Premium </h2>
 					<h3><span class="currency">$</span>5.26<span class="monuth">/  m</span></h3>
 					<ul>
-						<li>15GB De Almacenamiento</li>
+						<li></i>15GB De Almacenamiento</li>
 						<li>Compartir, Descargar y Guardar Archivos</li>
 						<li>Sin Publicidad</li>
 						<li>Variedad de fuentes e idiomas</li>
@@ -857,7 +857,7 @@
 			<div class="col-lg-6 col-md-6 col-sm-6">
 				<div class="cnt_info">
 					<ul>
-						<li><i class="fa fa-envelope"></i><p > multitextcr@gmail.com </p></li>
+						<li><i class="fa fa-envelope"></i><p ><a href="mailto:multitextcr@gmail.com" class="external-links">multitextcr@gmail.com</a></p></li>
 						<li><i class="fa fa-phone"></i><p> (+506) 2453-7685 </p></li>
 						<li><i class="fa fa-facebook"></i><p> Multitext App </p><input style="color:black" class="btn pricing_btn" type="button" value="Ir al Facebook" onClick="window.open('https://www.facebook.com/multitextappcr/?modal=admin_todo_tour&notif_id=1568054716191012&notif_t=page_invite&ref=notif', '', 'width=500,height=500')"></li>
 						<!--
