--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-12">
 				<div class="lft_hd">
-				<a href="index.html"><img src="img/logo3.png" alt="logomultitext" height="110x" width="100px"/></a>
+				<a href="index.html"><img src="img/logo3.png" alt="logomultitext" height="95px" width="95px"/></a>
 				</div>
 			</div>			
 			<div class="col-lg-9 col-md-9 col-sm-12">
