--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="en-US">
     <head>
-        <title>Multitext tu mejor opcion</title>
+        <title>MultitextWeb</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=3">
 
@@ -51,7 +51,7 @@
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-12">
 				<div class="lft_hd">
-				<a href="index.html"><img src="img/logo3.png" alt="logomultitext" height="95px" width="95px"/></a>
+				<a href="index.html"><img src="img/logo3.png" alt="logomultitext" height="85px" width="85px"/></a>
 				</div>
 			</div>			
 			<div class="col-lg-9 col-md-9 col-sm-12">
